crates/toml/tests/snapshots/invalid/array/missing-separator-02.stderr
TOML parse error at line 1, column 11
  |
1 | wrong = [ 1 2 3 ]
  |           ^^^^^
string values must be quoted, expected literal string
